# spark-tts

./: .gitignore  .pre-commit-config.yaml  README.md  play.py  pyproject.toml  ruff.toml  test.sh
spark_tts/: config.py
spark_tts/extensions/: __init__.py  inference.py  model.py  tensors.py  utilities.py
spark_tts/models/: audio_tokenizer.py  bicodec.py
spark_tts/modules/blocks/: layers.py  samper.py  vocos.py
spark_tts/modules/encoder_decoder/: feat_decoder.py  feat_encoder.py  wave_generator.py
spark_tts/modules/fsq/: finite_scalar_quantization.py  residual_fsq.py
spark_tts/modules/speaker/: ecapa_tdnn.py  perceiver_encoder.py  pooling_layers.py  speaker_encoder.py
spark_tts/modules/vq/: factorized_vector_quantize.py
spark_tts/utils/: audio.py  file.py  token_parser.py
tests/: __init__.py  test_entrypoint.py
